<resources>
    <string name="app_name">Project 2 Weather App</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="textview7">TextView</string>
    <string name="textview8">TextView</string>

    <string name="editText1">EditText</string>
    <string name="img">ImageView</string>
    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="coord">coord</string>
    <string name="temp">temp</string>
    <string name="weather">weather</string>
    <string name="wind">wind</string>
</resources>
